--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Figtree:ital,wght@0,300..900;1,300..900&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 * {
   box-sizing: border-box;
   margin: 0;
@@ -5,12 +6,14 @@
 }
 
 body {
-  background-color: lightblue;
-  font-family: sans-serif;
+  background: url(images/pattern-background-desktop.svg) no-repeat;
+  background-color:  hsl(225, 100%, 94%);
+  font-family: "Red Hat Display", sans-serif;
   align-items: center;
   justify-content: center;
   display: flex;
   height: 100vh;
+  width: 1440px;
 }
 
 .container {
@@ -43,7 +46,7 @@ body {
 }
 
 .card h4 {
-  font-weight: lighter;
+  font-weight: normal;
   font-size: 15px;
   line-height: 1.6;
   align-items: center;
@@ -98,9 +101,6 @@ body {
   color: #766CF1;
 }
 
-.year {
-  text-align: left;
-}
 
 .plan a {
   background-color: hsl(225, 100%, 98%);
@@ -123,7 +123,7 @@ body {
   font-weight: bold;
   margin: 20px;
   cursor: pointer;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 25px 20px #DDDAF9;
 }
 
 .payment:hover {
